migrate for refresh token, add logout endpoint, add refresh token
