# internal/models/token.go
@@ -1,0 +1,21 @@
+package models
+
+import "time"
+
+type RefreshToken struct {
+	ID        int       `json:"id"`
+	UserID    int       `json:"id"`
+	Token     string    `json:"id"`
+	ExpiresAt time.Time `json:"expires_at"`
+	Revoked   bool      `json:"revoked"`
+	CreatedAt time.Time `json:"created_at"`
+}
+
+type AuthResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type RefreshInput struct {
+	RefreshToken string `json:"refresh_token"`
+}
